--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: python
 python:
   - "2.7.9"
-script: nosetests
 before:
   - pip version
   - python -V
+install:
+  - pip install pyserial
+  - pip install mysql
+  - pip install MySQL-python
+  - pip install mysql-connector-python --allow-external mysql-connector-python
+script: nosetests
