--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ install:
   - pip install pyserial
   - pip install mysql
   - pip install MySQL-python
-  - pip install mysql-connector-python --allow-external mysql-connector-python
+  - pip install mysql-connector-python-rf --allow-external mysql-connector-python
 script: nosetests
